# pybumpchart

./: .gitignore  CHANGELOG.md  LICENSE  README.md  claude.md  pyproject.toml
src/pybumpchart/: __init__.py  chart.py  colors.py  core.py  data.py  labels.py
tests/: __init__.py  test_chart.py  test_core.py  test_data.py
tests/fixtures/: sample_data.csv
