[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybumpchart"
version = "0.1.0"
description = "A Python library for creating bump chart visualizations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "HYDauer" }
]
keywords = ["visualization", "chart", "bump chart", "ranking", "matplotlib", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "matplotlib>=3.5",
    "pandas>=1.4",
    "numpy>=1.21",
]

[project.optional-dependencies]
seaborn = ["seaborn>=0.12"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pandas-stubs>=1.5",
]

[project.urls]
Homepage = "https://github.com/HYDauer/pybumpchart"
Repository = "https://github.com/HYDauer/pybumpchart"
Issues = "https://github.com/HYDauer/pybumpchart/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pybumpchart"]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pybumpchart"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # Allow imports after matplotlib.use()

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "seaborn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
